[gd_scene load_steps=2 format=3 uid="uid://b6ov1c07brllg"]

[ext_resource type="Script" path="res://scenes/ui/title_screen.gd" id="1_v1y6f"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_v1y6f")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 0.37
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0, 0, 0, 0.372549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.25
anchor_bottom = 0.8
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "START"

[node name="LevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "LEVEL SELECT"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CREDITS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "BYE BYE"

[node name="Title" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
